vault/bsc/probes/owned_void_cast_else_branch_subscript.expected.stderr
<probe>:17:25: error: type of array cannot be qualified by '_Owned' 
    int *_Owned *_Owned arr[1];
                        ^
1 error generated.
